# fuguex-lib

./: Cargo.toml  build.rs
src/: lib.rs  logger.rs
src/observers/: dummy_peripheral.rs  mod.rs  solver.rs  trace.rs  watchpoint.rs
src/utils/: mod.rs  tbb.capnp  tbb.proto  tbb.rs
